Add visuals page, admin management, PDF upload, and deployment guide

--- a/Back-end/config/.env.example
+++ b/Back-end/config/.env.example
@@ -1,3 +1,7 @@
-﻿FLASK_ENV=production
-FLASK_APP=Template-backend.py
-SECRET_KEY=replace-me
+SECRET_KEY=change-this-to-a-strong-random-string
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USER=your_email@gmail.com
+SMTP_PASS=your_app_password
+SMTP_FROM=Market Fraud Detection <your_email@gmail.com>
+ADMIN_EMAIL=your_email@gmail.com
